# skrillax-network

./: Cargo.toml  LICENSE  README.md  deny.toml  justfile  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: check.yml  test.yml
crates/skrillax-codec/: Cargo.toml  README.md
crates/skrillax-codec/src/: hex_format.rs  lib.rs
crates/skrillax-packet/: Cargo.toml  README.md
crates/skrillax-packet-derive/: Cargo.toml  README.md
crates/skrillax-packet-derive-test/: Cargo.toml
crates/skrillax-packet-derive-test/src/: lib.rs
crates/skrillax-packet-derive/src/: lib.rs
crates/skrillax-packet/src/: lib.rs
crates/skrillax-protocol/: Cargo.toml  README.md
crates/skrillax-protocol/src/: lib.rs
crates/skrillax-security/: Cargo.toml  README.md
crates/skrillax-security/src/: checksum.rs  count.rs  handshake.rs  lib.rs
crates/skrillax-serde/: Cargo.toml  README.md
crates/skrillax-serde-derive/: Cargo.toml  README.md
crates/skrillax-serde-derive-test/: Cargo.toml
crates/skrillax-serde-derive-test/src/: lib.rs
crates/skrillax-serde-derive-test/tests/ui/: deserialize_invalid_tag_condition.rs  deserialize_invalid_tag_condition.stderr  deserialize_missing_size.rs  deserialize_missing_size.stderr  invalid_field_attribute.rs  invalid_field_attribute.stderr  serialize_invalid_tag_condition.rs  serialize_invalid_tag_condition.stderr  serialize_missing_size.rs  serialize_missing_size.stderr  unsupported_type.rs  unsupported_type.stderr
crates/skrillax-serde-derive/src/: deserialize.rs  lib.rs  serialize.rs  size.rs
crates/skrillax-serde/benches/: serde_bench.rs
crates/skrillax-serde/dev/: generate_data.rs
crates/skrillax-serde/src/: error.rs  lib.rs  time.rs
crates/skrillax-stream/: Cargo.toml  README.md
crates/skrillax-stream/src/: context.rs  handshake.rs  lib.rs  registry.rs  stream.rs
examples/echo-client-server/: Cargo.toml
examples/echo-client-server/src/: main.rs
examples/simple-official-client/: Cargo.toml
examples/simple-official-client/src/: main.rs
