[package]
name = "skrillax-codec"
version = "0.1.0"
edition = "2021"
authors = ["kumpelblase2"]
description = "A framing code for Silkroad Online network packets."
license = "MIT"

[features]
default = ["codec"]
codec = ["dep:tokio-util"]

[dependencies]
bytes.workspace = true
byteorder.workspace = true
tokio-util = { version = "0.7.10", features = ["codec"], optional = true }