[package]
name = "skrillax-codec"
version = "0.1.1"
edition = "2021"
authors = ["kumpelblase2"]
description = "A framing codec for Silkroad Online network packets."
license = "MIT"
repository = "https://git.eternalwings.de/tim/skrillax-network"
categories = ["encoding", "network-programming", "parser-implementations"]
keywords = ["silkroad", "codec"]

[features]
default = ["codec"]
codec = ["dep:tokio-util"]

[dependencies]
bytes.workspace = true
byteorder.workspace = true
tokio-util = { version = "0.7.12", features = ["codec"], optional = true }