[package]
name = "skrillax-packet-derive-test"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skrillax-packet = { path = "../skrillax-packet", features = ["derive"] }
skrillax-serde = { path = "../skrillax-serde", features = ["derive"] }
bytes.workspace = true
byteorder.workspace = true

[lib]
doctest = false