[package]
name = "skrillax-packet-derive-test"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skrillax-packet = { path = "../skrillax-packet", version = "0.4.0", features = ["derive"] }
skrillax-serde = { path = "../skrillax-serde", version = "0.3.0", features = ["derive"] }
bytes.workspace = true

[lib]
doctest = false