[package]
name = "skrillax-packet-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = "2"

[lib]
proc-macro = true
test = false