[package]
name = "skrillax-packet-derive"
version = "0.1.0"
edition = "2021"
authors = ["kumpelblase2"]
description = "Derive implementation for skrillax-packet."
license = "MIT"
repository = "https://git.eternalwings.de/tim/skrillax-network"
keywords = ["silkroad", "packets"]

[package.metadata.workspaces]
independent = true

[dependencies]
darling = "0.20"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = "2"

[lib]
proc-macro = true
test = false
doctest = false