[package]
name = "skrillax-serde-test"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skrillax-serde = { path = "../skrillax-serde", features = ["derive"] }
bytes.workspace = true
byteorder.workspace = true