[package]
name = "skrillax-serde"
version = "0.3.0"
edition = "2021"
authors = ["kumpelblase2"]
description = "A serialization/deserialization library for Silkroad Online packets."
license = "MIT"
repository = "https://git.eternalwings.de/tim/skrillax-network"
categories = ["encoding", "parser-implementations"]
keywords = ["silkroad", "serde"]

[package.metadata.workspaces]
independent = true

[features]
default = ["chrono"]
derive = ["dep:skrillax-serde-derive"]
chrono = ["dep:chrono"]
_gen = ["dep:rand"]

[dependencies]
bytes.workspace = true
byteorder.workspace = true
skrillax-serde-derive = { path = "../skrillax-serde-derive", version = "0.3.0", optional = true }
chrono = { version = "^0.4.38", optional = true }
thiserror.workspace = true
rand = { version = "0.8", optional = true }

[dev-dependencies]
bytes = "1.10"
criterion = "0.8"
rand = "0.8"

[[bench]]
name = "serde_bench"
harness = false
required-features = ["derive"]

[[bin]]
name = "generate_bench_data"
path = "dev/generate_data.rs"
required-features = ["derive", "_gen"]
