[package]
name = "skrillax-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skrillax-security = { path = "../skrillax-security" }
byteorder.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio-util = { version = "0.7", features = ["codec"] }
log = "0.4"
tokio = { version = "1.37", features = ["net"] }
crossbeam-channel = "0.5"
skrillax-serde = { path = "../skrillax-serde", features = ["derive"] }
skrillax-packet = { path = "../skrillax-packet", features = ["serde", "derive"] }
skrillax-codec = { path = "../skrillax-codec" }
futures = "0.3"
bitflags = "2.5"

[dev-dependencies]
tokio = { version = "1.37", features = ["rt", "net", "macros"] }