[package]
name = "skrillax-stream"
version = "0.1.0"
edition = "2021"
authors = ["kumpelblase2"]
description = "Combines skrillax-network crates to work nicely on top of a tokio tcp stream"
license = "MIT"
repository = "https://git.eternalwings.de/tim/skrillax-network"
categories = ["asynchronous", "network-programming"]
keywords = ["silkroad", "tokio", "tcp", "stream"]

[dependencies]
skrillax-security = { path = "../skrillax-security", version = "0.1.0" }
byteorder.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio-util = { version = "0.7", features = ["codec"] }
log = "0.4"
tokio = { version = "1.37", features = ["net"] }
crossbeam-channel = "0.5"
skrillax-serde = { path = "../skrillax-serde", features = [
    "derive",
], version = "0.1.1" }
skrillax-packet = { path = "../skrillax-packet", features = [
    "serde",
    "derive",
], version = "0.2.0" }
skrillax-codec = { path = "../skrillax-codec", version = "0.1.1" }
futures = "0.3"
bitflags = "2.5"

[dev-dependencies]
tokio = { version = "1.37", features = ["rt", "net", "macros"] }
