[package]
name = "simple-official-client"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "simple-official-client"
test = false

[dependencies]
skrillax-stream = { path = "../../crates/skrillax-stream" }
skrillax-packet = { path = "../../crates/skrillax-packet", features = [
    "derive",
    "serde",
] }
skrillax-serde = { path = "../../crates/skrillax-serde", features = ["derive"] }
tokio = { version = "1.37.0", features = ["net", "macros", "rt-multi-thread"] }
serde = { version = "1.0.198", features = ["derive"] }
bytes.workspace = true
byteorder.workspace = true
chrono = "0.4"