[package]
name = "simple-official-client"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.workspaces]
independent = true

[[bin]]
name = "simple-official-client"
test = false

[dependencies]
skrillax-stream = { path = "../../crates/skrillax-stream", version = "0.2.0" }
skrillax-packet = { path = "../../crates/skrillax-packet", version = "0.3.0", features = [
    "derive",
    "serde",
] }
skrillax-serde = { path = "../../crates/skrillax-serde", version = "0.2.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["net", "macros", "rt-multi-thread"] }
bytes.workspace = true
byteorder.workspace = true
chrono = "0.4"